<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Browser</string>
    <string name="choose_upload">Choose file for upload</string>
    <string name="uploads_disabled">File uploads are disabled.</string>
    <string name="new_tab">New tab</string>
    <string name="new_incognito_tab">New incognito tab</string>
    <string name="tab_bookmarks">Bookmarks</string>
    <string name="tab_most_visited">Most visited</string>
    <string name="tab_history">History</string>
    <string name="tab_snapshots">Saved pages</string>
    <string name="added_to_bookmarks">Added to bookmarks.</string>
    <string name="removed_from_bookmarks">Removed from bookmarks.</string>
    <string name="sign_in_to">Sign in to <xliff:g id="hostname">%s1</xliff:g> \"<xliff:g id="realm">%s2</xliff:g>\"</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="action">Sign in</string>
    <string name="bookmarks_add_page">Save bookmark</string>
    <string name="bookmarks_search">Browser</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_bar_loading">Loading\u2026</string>
    <string name="page_info">Page info</string>
    <string name="page_info_view">View page info</string>
    <string name="page_info_address">Address:</string>
    <string name="ssl_warnings_header">There are problems with the security certificate for this site.</string>
    <string name="ssl_continue">Continue</string>
    <string name="security_warning">Security warning</string>
    <string name="view_certificate">View certificate</string>
    <string name="ssl_go_back">Go back</string>
    <string name="ssl_untrusted">This certificate isn\'t from a trusted authority.</string>
    <string name="ssl_mismatch">The name of the site doesn\'t match the name on the certificate.</string>
    <string name="ssl_expired">This certificate has expired.</string>
    <string name="ssl_not_yet_valid">This certificate isn\'t valid yet.</string>
    <string name="ssl_date_invalid">This certificate has an invalid date.</string>
    <string name="ssl_invalid">This certificate is invalid.</string>
    <string name="ssl_unknown">Unknown certificate error.</string>
    <string name="stopping">Stopping\u2026</string>
    <string name="stop">Stop</string>
    <string name="reload">Refresh</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="save">OK</string>
    <string name="do_not_save">Cancel</string>
    <string name="location">Address</string>
    <string name="account">Account</string>
    <string name="containing_folder">Add to</string>
    <string name="new_folder">New folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="no_subfolders">No subfolders.</string>
    <string name="add_to_bookmarks_menu_option">Bookmarks</string>
    <string name="add_to_homescreen_menu_option">Home screen</string>
    <string name="add_to_other_folder_menu_option">Other folder</string>
    <string name="name">Label</string>
    <string name="http">http://</string>
    <string name="save_to_bookmarks">Save to bookmarks</string>
    <string name="bookmark_this_page">Bookmark this page</string>
    <string name="remove">Remove</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="create_shortcut_bookmark">Add shortcut to home</string>
    <string name="open_bookmark">Open</string>
    <string name="remove_bookmark">Delete bookmark</string>
    <string name="remove_from_bookmarks">Remove from bookmarks</string>
    <string name="remove_history_item">Remove from history</string>
    <string name="set_as_homepage">Set as homepage</string>
    <string name="bookmark_saved">Saved to bookmarks.</string>
    <string name="bookmark_not_saved">Couldn\'t save bookmark.</string>
    <string name="homepage_set">Homepage set.</string>
    <string name="bookmark_needs_title">"Bookmark must have a name."</string>
    <string name="bookmark_needs_url">"Bookmark must have a location."</string>
    <string name="bookmark_url_not_valid">This URL isn\'t valid.</string>
    <string name="bookmark_cannot_save_url">This URL can\'t be bookmarked.</string>
    <string name="bookmark_page">Bookmark last-viewed page</string>
    <string name="bookmark_thumbnail_view">Thumbnails</string>
    <string name="bookmark_list_view">List</string>
    <string name="current_page">from\u0020</string>
    <string name="delete_bookmark_warning">Delete bookmark \"<xliff:g id="bookmark">%s</xliff:g>\"?</string>
    <string name="open_all_in_new_window">Open all in new tabs</string>
    <string name="goto_dot">Go</string>
    <string name="select_dot">Select text</string>
    <string name="close_other_tabs">Close other tabs</string>
    <string-array name="bookmarks" translatable="false">
        <item>Google</item>
        <item>http://www.google.com/</item>
        <item>Picasa</item>
        <item>http://picasaweb.google.com/</item>
        <item>Yahoo!</item>
        <item>http://www.yahoo.com/</item>
        <item>MSN</item>
        <item>http://www.msn.com/</item>
        <item>Twitter</item>
        <item>http://twitter.com/</item>
        <item>Facebook</item>
        <item>http://www.facebook.com/</item>
        <item>Wikipedia</item>
        <item>http://www.wikipedia.org/</item>
        <item>eBay</item>
        <item>http://www.ebay.com/</item>
        <item>CNN</item>
        <item>http://www.cnn.com/</item>
        <item>NY Times</item>
        <item>http://www.nytimes.com/</item>
        <item>ESPN</item>
        <item>http://espn.com/</item>
        <item>Amazon</item>
        <item>http://www.amazon.com/</item>
        <item>Weather Channel</item>
        <item>http://www.weather.com/</item>
        <item>BBC</item>
        <item>http://www.bbc.co.uk/</item>
    </string-array>
    <string name="shortcut_bookmark">Bookmark</string>
    <string name="shortcut_bookmark_title">Choose a bookmark</string>
    <string name="history">History</string>
    <string name="menu_view_download">Downloads</string>
    <string name="copy_page_url">Copy page URL</string>
    <string name="share_page">Share page</string>
    <string name="menu_save_snapshot">Save for offline reading</string>
    <string name="saving_snapshot">Saving\u2026</string>
    <string name="snapshot_failed">Couldn\'t save for offline reading.</string>
    <string name="contextheader_folder_bookmarkcount"><xliff:g id="bookmark_count">%d</xliff:g> bookmarks</string>
    <string name="contextheader_folder_empty">Empty folder</string>
    <string name="contextmenu_openlink">Open</string>
    <string name="contextmenu_openlink_newwindow">Open in new tab</string>
    <string name="contextmenu_openlink_newwindow_background">Open in new background tab</string>
    <string name="contextmenu_savelink">Save link</string>
    <string name="contextmenu_sharelink">Share link</string>
    <string name="contextmenu_copy">Copy</string>
    <string name="contextmenu_copylink">Copy link URL</string>
    <string name="contextmenu_download_image">Save image</string>
    <string name="contextmenu_view_image">View image</string>
    <string name="contextmenu_set_wallpaper">Set as wallpaper</string>
    <string name="contextmenu_dial_dot">Dial\u2026</string>
    <string name="contextmenu_add_contact">Add contact</string>
    <string name="contextmenu_send_mail">Send email</string>
    <string name="pref_content_load_images">Load images</string>
    <string name="pref_content_load_images_summary">Display images on web pages</string>
    <string name="pref_content_block_popups">Block pop-ups</string>
    <string name="pref_content_javascript">Enable JavaScript</string>
    <string name="pref_content_plugins">Enable plug-ins</string>
    <string name="pref_content_search_engine">Set search engine</string>
    <string name="pref_content_autofit">Auto-fit pages</string>
    <string name="pref_content_autofit_summary">Format webpages to fit the screen</string>
    <string name="pref_autofill_enabled">Form auto-fill</string>
    <string name="pref_autofill_enabled_summary">Fill out web forms with a single touch</string>
    <string name="pref_privacy_security_title">Privacy &amp; security</string>
    <string name="pref_privacy_clear_cache">Clear cache</string>
    <string name="pref_privacy_clear_cache_summary">Clear locally cached content and databases</string>
    <string name="pref_privacy_cookies_title">Cookies</string>
    <string name="pref_privacy_clear_cookies">Clear all cookie data</string>
    <string name="pref_privacy_clear_history">Clear history</string>
    <string name="pref_privacy_clear_history_summary">Clear the browser navigation history</string>
    <string name="pref_privacy_clear_form_data">Clear form data</string>
    <string name="pref_privacy_clear_form_data_summary">Clear all saved form data</string>
    <string name="pref_privacy_clear_passwords">Clear passwords</string>
    <string name="pref_privacy_clear_passwords_summary">Clear all saved passwords</string>
    <string name="pref_privacy_enable_geolocation">Enable location</string>
    <string name="pref_privacy_enable_geolocation_summary">Allow sites to request access to your location</string>
    <string name="pref_privacy_clear_geolocation_access">Clear location access</string>
    <string name="pref_privacy_clear_geolocation_access_summary">Clear location access for all websites</string>
    <string name="pref_security_remember_passwords">Remember passwords</string>
    <string name="pref_security_remember_passwords_summary">Save usernames and passwords for websites</string>
    <string name="pref_security_save_form_data">Remember form data</string>
    <string name="pref_security_save_form_data_summary">Remember data I type in forms for later use</string>
    <string name="pref_security_show_security_warning">Show security warnings</string>
    <string name="pref_security_show_security_warning_summary">Show warning if there\'s a problem with a site\'s security</string>
    <string name="pref_security_accept_cookies">Accept cookies</string>
    <string name="pref_security_accept_cookies_summary">Allow sites to save and read cookie data</string>
    <string name="pref_force_userscalable">Force enable zoom</string>
    <string name="pref_force_userscalable_summary">Override a website\'s request to control zoom behavior</string>
    <string name="pref_default_text_encoding">Text encoding</string>
    <string name="pref_font_size_category">Text size</string>
    <string name="menu_bottom_refresh">Refresh</string>
    <string name="menu_bottom_add_bookmark">addBookMark</string>
    <string name="menu_bottom_history">BookMark</string>
    <string name="menu_bottom_download">Download</string>
    <string name="menu_bottom_setting">Settings</string>
    <string name="menu_bottom_share">Share</string>
    <string name="menu_bottom_tools">Tools</string>
    <string name="menu_bottom_exit">Exit</string>
    <string name="pref_setting_about_title">关于浏览器</string>
    <string name="pref_setting_feedback_title">意见反馈</string>
    <string name="pref_setting_rate_us_title">评价我们</string>
    <string name="pref_setting_user_agent_value">默认</string>
    <string name="pref_setting_user_agent_title">设置浏览器标识</string>
    <string name="pref_setting_font_size_desc">调整文本缩放和文字大小</string>
    <string name="pref_setting_security_desc">允许浏览器记住密码，保存表单等</string>
    <string name="pref_setting_clear_data_title">清除数据</string>
    <string name="pref_setting_filter_ad_title">广告过滤</string>
    <string name="pref_setting_download_dir_title">选择存放的目录</string>
    <string name="pref_setting_download_dir_desc">/storage/emulated/0/Download/</string>
    <string name="pref_setting_exitconfirm_title">退出前确认</string>
    <string name="pref_privacy_clearall">清除所选项</string>
</resources>